name:                blog-animations
version:             0.1.0.0
-- synopsis:
-- description:
homepage:
license:             BSD3
license-file:        LICENSE
author:
maintainer:
copyright:
category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Animations.Haskell
  other-modules:       Animations.Common,
                       Animations.Haskell.BasicFunctions
  build-depends:       base >= 4.7 && < 5,
                       reanimate >= 1.1.3.1,
                       reanimate-svg >= 0.13.0.1,
                       lens >= 5.0.1,
                       text >= 1.2.4.1,
                       linear >= 1.21.6
  default-language:    Haskell2010


executable blog-animations
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       reanimate >= 1.1.3.1,
                       reanimate-svg >= 0.13.0.1,
                       lens >= 5.0.1
